# romanica

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  tsconfig.base.json
apps/api/: package.json
apps/api/src/: app.ts  approvals.ts  audit.ts  auth.ts  db.ts  env.ts  http.ts  ingest.ts  memories.ts  messages.ts  policies.ts  pools.ts  queries.ts  replay.ts  rollup.ts  runtime.ts  server.ts  storage.ts  workflows.ts
apps/api/test/: approvals.test.ts  auth.test.ts  ingest.test.ts  memories.test.ts  messages.test.ts  pools.test.ts  query.test.ts  replay.test.ts  runtime.test.ts  workflows.test.ts
apps/landing/: README.md  package.json  tsconfig.json
apps/landing/app/: globals.css  layout.tsx  page.tsx
apps/landing/components/: Clock.tsx  CodeWindow.tsx  Nav.tsx  layers.ts
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Badges.tsx  OverviewClient.tsx  ReplayPanel.tsx  Sidebar.tsx  SpanTree.tsx  (+3 more)
db/migrations/: 0001_init.sql  0002_audit_events.sql  0003_agent_messages.sql  0004_workflows.sql  0005_memories.sql  0006_worker_pools.sql  0007_approvals.sql  0008_runtime_runs.sql  0009_workflow_runs.sql  0010_engine_hardening.sql
docs/: BUILD.md  layer-4-observability.md  platform-status.md  romanica.md
engines/agent-compiler/: Cargo.toml  README.md
engines/agent-compiler/src/: lib.rs  main.rs
engines/ingest-core/: Cargo.toml  README.md
engines/ingest-core/src/: lib.rs  main.rs
scripts/: check-dashboard.ts  migrate.ts  seed-platform.ts  seed.ts  smoke.ts
(+26 files in other folders)
