[package]
name = "romanica-agent-compiler"
version = "0.1.0"
edition = "2024"
description = "Workflow DAG compiler seed for Romanica agent orchestration"
license = "UNLICENSED"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[bin]]
name = "romanica-agent-compiler"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1"

