[package]
name = "romanica-ingest-core"
version = "0.1.0"
edition = "2024"
description = "Rust ingest validation and rollup core for Romanica traces"
license = "UNLICENSED"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"

